feat: Spectator API 응답 필드 확장 및 Riot API 매핑 개선
Riot API 응답 구조에 맞게 Spectator 도메인 모델을 확장합니다:
- gameQueueConfigId 필드 추가 (솔로 랭크, 일반 등 게임 큐 타입 구분)
- summonerName을 riotId로 변경 (gameName#tagLine 형식)
- profileIconId 필드 추가
- encryptionKey를 observers.encryptionKey 중첩 구조에서 매핑
- 새로운 VO 추가: ObserversVO, GameCustomizationObjectVO

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>